# p2p-chat

./: Cargo.toml
client/src/: main.rs
server/: Cargo.toml
server/src/: client.rs  main.rs  main_ui.rs  server.rs
src/: client.rs  main.rs  server.rs  shared.rs  ui.rs
