[package]
name = "project"
version = "0.1.0"
authors = ["Falik, Oded <oxf170130@utdallas.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
druid = "0.7.0"
crossbeam-channel = "0.5.1"
rustop = "1.1.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
